--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,21 @@
 <!doctype html>
 <html lang="en">
+
+<!-- Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122732749-1"></script>
+
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){
+    dataLayer.push(arguments);
+  }
+  
+  gtag('js', new Date());
+  gtag('config', 'UA-122732749-1');
+
+</script>
 <head>
   <meta charset="utf-8">
   <title>HV TDP</title>
@@ -14,5 +30,6 @@
 </head>
 <body>
   <app-root></app-root>
+
 </body>
 </html>
