feat: SEO Google crawling verification + sitemap

--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,10 @@
   <meta charset="utf-8">
   <title>HV TDP Stainz</title>
   <base href="/">
-
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Auf der Website finden sich die aktuellen News rund um den HV TDP Stainz, den Stand in der Meisterschaft, unser Team, die Galerie, Videos und andere Highlights wie den offiziellen HV TDP Fanshop. Unter den Matchballspenden finden sich außerdem unsere Sponsoren. Auch aktuelle Umfragen und Dokumente rund um das HV TDP Vereinsleben werden zur Verfügung gestellt.">
+  <meta name="google-site-verification" content="opNErxv8sFr7wDEWyAudwlJCDT697m-DVbcayZaq93g" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
