--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,12 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <!-- 1. Configure SystemJS -->
+  <!-- <script src="system.config.js"></script> -->
+  <!-- 2. Add cookieconsent dependency-->
+  <!-- <link rel="stylesheet" type="text/css" href="node_modules/cookieconsent/build/cookieconsent.min.css"/>
+  <script src="node_modules/cookieconsent/build/cookieconsent.min.js"></script> -->
+
 </head>
 <body>
   <app-root></app-root>
