Add cookieconsent dependencies

--- a/src/index.html
+++ b/src/index.html
@@ -30,11 +30,9 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <!-- 1. Configure SystemJS -->
-  <!-- <script src="system.config.js"></script> -->
-  <!-- 2. Add cookieconsent dependency-->
-  <!-- <link rel="stylesheet" type="text/css" href="node_modules/cookieconsent/build/cookieconsent.min.css"/>
-  <script src="node_modules/cookieconsent/build/cookieconsent.min.js"></script> -->
+  <!-- cookieconsent dependency-->
+  <link rel="stylesheet" type="text/css" href="node_modules/cookieconsent/build/cookieconsent.min.css"/>
+  <script src="node_modules/cookieconsent/build/cookieconsent.min.js"></script>
 
 </head>
 <body>
