Add goal of the season component

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,10 @@
   <link rel="stylesheet" type="text/css" href="node_modules/cookieconsent/build/cookieconsent.min.css"/>
   <script src="node_modules/cookieconsent/build/cookieconsent.min.js"></script>
 
+  <!-- Surveyhero -->
+  <!-- <script src="https://embed-cdn.surveyhero.com/js/user/embed.wcuxrs9g.js" async></script> -->
+  <script src="src/assets/js/survey/main.js" async></script>
+  <script src="src/assets/js/survey/embed.wcuxrs9g.js" async></script>
 </head>
 <body>
   <app-root></app-root>
