Add Google Analystics 4 stream

--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,6 @@
 <!doctype html>
 <html lang="en">
 
-<!-- Google Analytics -->
-<!-- Global site tag (gtag.js) - Google Analytics -->
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122732749-1"></script>
-
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() {
-    dataLayer.push(arguments);
-  }
-  
-  gtag('js', new Date());
-  gtag('config', 'UA-122732749-1');
-</script>
-
 <head>
   <meta charset="utf-8">
   <title>HV TDP Stainz</title>
@@ -39,8 +24,35 @@
   <script src="src/assets/js/survey/main.js" async></script>
   <script src="src/assets/js/survey/embed.wcuxrs9g.js" async></script>
 </head>
+
+<!-- Google Universal Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-122732749-1"></script>
+
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  
+  gtag('js', new Date());
+  gtag('config', 'UA-122732749-1');
+</script> 
+
+<!-- Google tag (gtag.js) -->
+<!-- Google Analytics 4 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FNF110XEHW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-FNF110XEHW');
+</script>
+
 <body>
   <app-root></app-root>
-
 </body>
+
 </html>
