add man of the season survery

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,8 @@
 
   <!-- Surveyhero -->
   <!-- <script src="https://embed-cdn.surveyhero.com/js/user/embed.wcuxrs9g.js" async></script> -->
+  <script src="https://embed-cdn.surveyhero.com/js/user/embed.qexyachf.js" async></script>
+
   <script src="src/assets/js/survey/main.js" async></script>
   <script src="src/assets/js/survey/embed.wcuxrs9g.js" async></script>
 </head>
