--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,128 @@
 
   <script src="src/assets/js/survey/main.js" async></script>
   <script src="src/assets/js/survey/embed.wcuxrs9g.js" async></script>
+
+  <!-- https://docs.flowiseai.com/using-flowise/embed -->
+  <script type="module">
+    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
+    Chatbot.init({
+        chatflowid: "3d0fc477-d898-4a7d-8474-67348965eb28",
+        //apiHost: "https://flowise-hv-tdp-chatbot.onrender.com/",
+        apiHost: "https://www.hvtdpstainz.at/flowise",
+        chatflowConfig: {
+            // "sessionId": "123",
+            "returnSourceDocuments": true
+        },
+        observersConfig: {
+            // User input has changed
+            observeUserInput: (userInput) => {
+              //console.log({ userInput });
+            },
+            // The bot message stack has changed
+            observeMessages: (messages) => {
+              console.log({ messages });
+            },
+            // The bot loading signal changed
+            observeLoading: (loading) => {
+              console.log({ loading });
+            },
+        },
+        theme: {
+            button: {
+                backgroundColor: '#3B81F6',
+                right: 20,
+                bottom: 20,
+                size: 48,
+                dragAndDrop: true,
+                iconColor: 'white',
+                customIconSrc: 'https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/google-messages.svg',
+                autoWindowOpen: {
+                    autoOpen: false,
+                    openDelay: 2,
+                    autoOpenOnMobile: false
+                }
+            },
+            tooltip: {
+                showTooltip: true,
+                tooltipMessage: 'Hallo Sportsfreund 👋!',
+                tooltipBackgroundColor: '#3B81F6',
+                tooltipTextColor: 'white',
+                tooltipFontSize: 16
+            },
+            // disclaimer: {
+            //     title: 'Disclaimer',
+            //     message: "By using this chatbot, you agree to the <a target=\"_blank\" href=\"https://flowiseai.com/terms\">Terms & Condition</a>",
+            //     textColor: 'black',
+            //     buttonColor: '#3b82f6',
+            //     buttonText: 'Start Chatting',
+            //     buttonTextColor: 'white',
+            //     blurredBackgroundColor: 'rgba(0, 0, 0, 0.4)',
+            //     backgroundColor: 'white'
+            // },
+            customCSS: ``,
+            chatWindow: {
+                showTitle: true,
+                showAgentMessages: true,
+                title: 'HV TDP Assistant',
+                titleAvatarSrc: 'https://www.hvtdpstainz.at/assets/images/chat_logo.png',
+                welcomeMessage: 'Hallo Sportsfreund! Ich bin der HV TDP Assistant und beantworte dir gerne alle Fragen rund um den HV TDP Stainz!',
+                errorMessage: 'Hoppla, da ist wohl ein Fehler aufgetreten!',
+                backgroundColor: '#ffffff',
+                backgroundImage: '',
+                height: 700,
+                width: 400,
+                fontSize: 16,
+                starterPrompts: [
+                    "Wann wurde der HV TDP gegründet?",
+                    "Welche 5 Spieler haben die meisten Trainings?"
+                ],
+                starterPromptFontSize: 15,
+                clearChatOnReload: false,
+                sourceDocsTitle: 'Sources:',
+                renderHTML: true,
+                botMessage: {
+                    backgroundColor: '#f7f8ff',
+                    textColor: '#303235',
+                    showAvatar: true,
+                    avatarSrc: 'https://www.hvtdpstainz.at/assets/images/chatbot.png'
+                },
+                userMessage: {
+                    backgroundColor: '#3B81F6',
+                    textColor: '#ffffff',
+                    showAvatar: true,
+                    avatarSrc: 'https://www.hvtdpstainz.at/assets/images/chat_user.png'
+                },
+                textInput: {
+                    placeholder: 'Stelle deine Frage',
+                    backgroundColor: '#ffffff',
+                    textColor: '#303235',
+                    sendButtonColor: '#3B81F6',
+                    maxChars: 250,
+                    maxCharsWarningMessage: 'Du hast das Textlimit überschritten. Bitte gib maximal 250 Zeichen ein.',
+                    autoFocus: true,
+                    sendMessageSound: true,
+                    sendSoundLocation: 'send_message.mp3',
+                    receiveMessageSound: true,
+                    receiveSoundLocation: 'receive_message.mp3'
+                },
+                feedback: {
+                    color: '#303235'
+                },
+                dateTimeToggle: {
+                    date: true,
+                    time: true
+                },
+                footer: {
+                    textColor: '#000000',
+                    text: 'Powered by',
+                    company: 'HVTDP AI',
+                    companyLink: 'https://www.hvtdpstainz.at'
+                }
+            }
+        }
+    })
+</script>
+
 </head>
 
 <!-- Google Universal Analytics -->
