feat(AI): Shorten flowise tooltip

--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
           },
           tooltip: {
             showTooltip: true,
-            tooltipMessage: 'Hallo Sportsfreund 👋!',
+            tooltipMessage: 'Hey Sportsfreund 👋!',
             tooltipBackgroundColor: '#3B81F6',
             tooltipTextColor: 'white',
             tooltipFontSize: 16,
