feat: Update about page

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,11 @@
     />
     <meta name="google-site-verification" content="opNErxv8sFr7wDEWyAudwlJCDT697m-DVbcayZaq93g" />
 
+    <meta name="theme-color" content="#FF69B4" />
+
+    <meta name="theme-color" content="#FF69B4" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#C71585" media="(prefers-color-scheme: dark)">
+
     <link rel="icon" type="image/x-icon" href="hvtdp.png" />
     <link
       rel="stylesheet"
